--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  #Google Maps
+  #GPS Plugins
   google_maps_flutter: ^2.0.11
+  permission_handler: ^8.2.5
+  location: ^4.3.0
 
   #Icons
   cupertino_icons: ^1.0.2
