--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   #GPS Plugins
   google_maps_flutter: ^2.0.11
   permission_handler: ^8.2.5
-  location: ^4.3.0
+  geolocator: ^7.7.1
 
   #Icons
   cupertino_icons: ^1.0.2
