--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,19 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # BLoC
+  bloc: ^7.2.1
+  flutter_bloc: ^7.3.1
+
   #GPS Plugins
   google_maps_flutter: ^2.0.11
   permission_handler: ^8.2.5
   geolocator: ^7.7.1
+
+  #Utils
+  equatable: ^2.0.3
+  intl: ^0.17.0
+  stop_watch_timer: ^1.3.1
 
   #Icons
   cupertino_icons: ^1.0.2
