--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_maps_flutter: ^2.0.11
   permission_handler: ^8.2.5
   geolocator: ^7.7.1
+  flutter_polyline_points: ^1.0.0
 
   #Utils
   equatable: ^2.0.3
