--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:icon="@mipmap/ic_launcher">
         <!-- Add your Google Maps API Key here -->
         <meta-data android:name="com.google.android.geo.API_KEY"
-                   android:value="AIzaSyAHD2ayUeD2-20XdXJDs_BhCA-tuc-xle4"/>
+                   android:value="<-- YOUR API KEY -->"/>
         <activity
                 android:name=".MainActivity"
                 android:launchMode="singleTop"
